{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 103,
  "lineage": "7b55f23d-459e-2399-f695-02937d9ec1a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c9a1fc6d0a83418",
            "association_id": "eipassoc-0e8bc58b9a0c0974b",
            "domain": "vpc",
            "id": "eipalloc-01c9a1fc6d0a83418",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0065337e173ed7b2b",
            "private_dns": "ip-10-0-1-123.ec2.internal",
            "private_ip": "10.0.1.123",
            "public_dns": "ec2-34-198-31-169.compute-1.amazonaws.com",
            "public_ip": "34.198.31.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "skyglass",
              "Name": "eip-nat_management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "eip-nat_management"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:217264062492:loadbalancer/tf-lb-20211128072006794800000001",
            "availability_zones": [
              "us-east-1c",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20211128072006794800000001-61953177.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20211128072006794800000001",
            "idle_timeout": 60,
            "instances": [
              "i-0e859d4b55017b8c0"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:217264062492:certificate/7c3920b0-7377-4f0b-98b8-16a9000b630f"
              },
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20211128072006794800000001",
            "security_groups": [
              "sg-02bf0f562041e2b19"
            ],
            "source_security_group": "217264062492/elb_jenkins_sg",
            "source_security_group_id": "sg-02bf0f562041e2b19",
            "subnets": [
              "subnet-078499439093c2031",
              "subnet-0d0fc1e1ed2bed3b1"
            ],
            "tags": {
              "Author": "skyglass",
              "Name": "jenkins_elb"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "jenkins_elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_vpc.management",
            "data.aws_availability_zones.available",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "data.aws_ami.jenkins-master",
            "random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:217264062492:instance/i-0bdcd7291f0545f45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdcd7291f0545f45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002c5cd23d7946701",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-34-201-104-132.compute-1.amazonaws.com",
            "public_ip": "34.201.104.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c29f844ab0f55621",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0fc1e1ed2bed3b1",
            "tags": {
              "Author": "skyglass",
              "Name": "bastion"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c53f9f1a6d2fac4f"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_ami.bastion",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0efb1ade56640bcc0",
            "arn": "arn:aws:ec2:us-east-1:217264062492:instance/i-0e859d4b55017b8c0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e859d4b55017b8c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07db87ddeee74e1e7",
            "private_dns": "ip-10-0-0-237.ec2.internal",
            "private_ip": "10.0.0.237",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c56774b713e7f5a0",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7628006442f96b3",
            "tags": {
              "Author": "skyglass",
              "Name": "jenkins_master"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "jenkins_master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e0b84059c78a291"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_vpc.management",
            "data.aws_ami.jenkins-master",
            "aws_subnet.private_subnets",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:internet-gateway/igw-0647bab684854ec85",
            "id": "igw-0647bab684854ec85",
            "owner_id": "217264062492",
            "tags": {
              "Author": "skyglass",
              "Name": "igw_management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "igw_management"
            },
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c9a1fc6d0a83418",
            "connectivity_type": "public",
            "id": "nat-04f07062d7bce7863",
            "network_interface_id": "eni-0065337e173ed7b2b",
            "private_ip": "10.0.1.123",
            "public_ip": "34.198.31.169",
            "subnet_id": "subnet-0d0fc1e1ed2bed3b1",
            "tags": {
              "Author": "skyglass",
              "Name": "nat_management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "nat_management"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:route-table/rtb-0f7594c73ba51c16c",
            "id": "rtb-0f7594c73ba51c16c",
            "owner_id": "217264062492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f07062d7bce7863",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "skyglass",
              "Name": "private_rt_management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "private_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:route-table/rtb-0a3476a377cbc0068",
            "id": "rtb-0a3476a377cbc0068",
            "owner_id": "217264062492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0647bab684854ec85",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "skyglass",
              "Name": "public_rt_management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "public_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dd46d1b0fc51733",
            "route_table_id": "rtb-0f7594c73ba51c16c",
            "subnet_id": "subnet-0c7628006442f96b3"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_eip.nat",
            "aws_nat_gateway.nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09674ba444b518428",
            "route_table_id": "rtb-0f7594c73ba51c16c",
            "subnet_id": "subnet-0fdb79fd05ed9257a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0033226ed9979d79f",
            "route_table_id": "rtb-0a3476a377cbc0068",
            "subnet_id": "subnet-0d0fc1e1ed2bed3b1"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e38cfc9d70546442",
            "route_table_id": "rtb-0a3476a377cbc0068",
            "subnet_id": "subnet-078499439093c2031"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:security-group/sg-0c53f9f1a6d2fac4f",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c53f9f1a6d2fac4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg_management",
            "name_prefix": "",
            "owner_id": "217264062492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "skyglass",
              "Name": "bastion_sg_management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "bastion_sg_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:security-group/sg-02bf0f562041e2b19",
            "description": "Allow http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bf0f562041e2b19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_jenkins_sg",
            "name_prefix": "",
            "owner_id": "217264062492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "skyglass",
              "Name": "elb_jenkins_sg"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "elb_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:security-group/sg-01e0b84059c78a291",
            "description": "Allow traffic on port 8080 and enable SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e0b84059c78a291",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bf0f562041e2b19"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c53f9f1a6d2fac4f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_master_sg",
            "name_prefix": "",
            "owner_id": "217264062492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "skyglass",
              "Name": "jenkins_master_sg"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "jenkins_master_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_workers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:security-group/sg-0ce37ee2794d1c9a7",
            "description": "Allow traffic on port 22 from Jenkins master SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce37ee2794d1c9a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e0b84059c78a291",
                  "sg-0c53f9f1a6d2fac4f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_workers_sg",
            "name_prefix": "",
            "owner_id": "217264062492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "skyglass",
              "Name": "jenkins_workers_sg"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "jenkins_workers_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host",
            "aws_security_group.jenkins_master_sg",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:subnet/subnet-0c7628006442f96b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c7628006442f96b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217264062492",
            "tags": {
              "Author": "skyglass",
              "Name": "private_10.0.0.0_us-east-1c"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "private_10.0.0.0_us-east-1c"
            },
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:subnet/subnet-0fdb79fd05ed9257a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fdb79fd05ed9257a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217264062492",
            "tags": {
              "Author": "skyglass",
              "Name": "private_10.0.2.0_us-east-1f"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "private_10.0.2.0_us-east-1f"
            },
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "dependencies": [
            "aws_vpc.management",
            "data.aws_availability_zones.available",
            "random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:subnet/subnet-0d0fc1e1ed2bed3b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d0fc1e1ed2bed3b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217264062492",
            "tags": {
              "Author": "skyglass",
              "Name": "public_10.0.1.0_us-east-1c"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "public_10.0.1.0_us-east-1c"
            },
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:subnet/subnet-078499439093c2031",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-078499439093c2031",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217264062492",
            "tags": {
              "Author": "skyglass",
              "Name": "public_10.0.3.0_us-east-1f"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "public_10.0.3.0_us-east-1f"
            },
            "vpc_id": "vpc-0d9b0da775440853a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_shuffle.public_az",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:217264062492:vpc/vpc-0d9b0da775440853a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1c97a9e201ac262",
            "default_route_table_id": "rtb-04d7560543169598b",
            "default_security_group_id": "sg-0f4ac6eeda58a8e8b",
            "dhcp_options_id": "dopt-02c2d37672ad2ae4b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d9b0da775440853a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04d7560543169598b",
            "owner_id": "217264062492",
            "tags": {
              "Author": "skyglass",
              "Name": "management"
            },
            "tags_all": {
              "Author": "skyglass",
              "Name": "management"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}